@@ -1393,7 +1393,7 @@ case 24:
 YY_RULE_SETUP
 #line 198 "scan.l"
 {
-			   /* #ifndef and ifdef can appear in column 1 */
+			   /* #ifndef and ifndef can appear in column 1 */
 			   quoted = 1;
 			   yylval.s = strdup(yytext);
 			   return IDENTIFIER;
